fixed z-index

--- a/style.css
+++ b/style.css
@@ -303,6 +303,8 @@ img {
   background: white url(img/site-hero.jpg) no-repeat center;
   background-size: cover;
   margin-top: -100px;
+  position: relative;
+  z-index: 50;
 }
 
 .slides {
@@ -359,6 +361,8 @@ img {
 /*HISTORY OF AGENCY BLOCK*/
 .site-history-agency {
   margin-top: -300px;
+  position: relative;
+  z-index: 100;
 }
 
 .history-pic img {
